Corrected to send

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1512,7 +1512,7 @@
     "message": "Send Amount"
   },
   "sendETH": {
-    "message": "Send ETH"
+    "message": "Send"
   },
   "sendSpecifiedTokens": {
     "message": "Send $1",
