--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1937,7 +1937,12 @@
     "message": "Using the best quote"
   },
   "swapVerifyTokenExplanation": {
-    "message": "Multiple tokens can use the same name and symbol. Check Etherscan to verify this is the token you're looking for."
+    "message": "Multiple tokens can use the same name and symbol. Check Etherscan to verify this is the token you're looking for.",
+    "description": "This appears in a tooltip next to the verifyThisTokenOn message. It gives the user more information about why they should check the token on a block explorer. This is the message that appears when we want to direct the user to etherscan."
+  },
+  "swapVerifyTokenOnBlockExplorerExplanation": {
+    "message": "Multiple tokens can use the same name and symbol. Check $1 to verify this is the token you're looking for.",
+    "description": "This appears in a tooltip next to the verifyThisTokenOn message. It gives the user more information about why they should check the token on a block explorer. This is the message that appears when we want to direct the user to a specific blocker explorer that is not etherscan. $1 will be the name or url of the block explorer."
   },
   "swapViewToken": {
     "message": "View $1"
