--- a/app/_locales/tl/messages.json
+++ b/app/_locales/tl/messages.json
@@ -1769,7 +1769,8 @@
     "message": "Hindi Alam"
   },
   "swapVerifyTokenExplanation": {
-    "message": "Maaaring gamitin ng maraming token ang iisang pangalan at simbolo. Suriin ang Etherscan para ma-verify na ito ang token na hinahanap mo."
+    "message": "Maaaring gamitin ng maraming token ang iisang pangalan at simbolo. Suriin ang Etherscan para ma-verify na ito ang token na hinahanap mo.",
+    "description": "This appears in a tooltip next to the verifyThisTokenOn message. It gives the user more information about why they should check the token on a block explorer. This is the message that appears when we want to direct the user to etherscan."
   },
   "swapViewToken": {
     "message": "Tingnan ang $1"
