chore: update gas sponsored labels rendering

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -4253,6 +4253,9 @@
   "none": {
     "message": "None"
   },
+  "noNetworkFee": {
+    "message": "No network fee"
+  },
   "notBusy": {
     "message": "Not busy"
   },
