add Keycard Shell string in localizations

--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -2921,6 +2921,9 @@
     "message": "JSON Datei",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "Kontoname"
   },
