--- a/app/_locales/fr/messages.json
+++ b/app/_locales/fr/messages.json
@@ -2921,6 +2921,9 @@
     "message": "Fichier JSON",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "Nom du compte"
   },
