--- a/app/_locales/ga/messages.json
+++ b/app/_locales/ga/messages.json
@@ -3084,6 +3084,9 @@
     "message": "Comhad JSON",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "Ainm an chuntais"
   },
