--- a/app/_locales/pt/messages.json
+++ b/app/_locales/pt/messages.json
@@ -2921,6 +2921,9 @@
     "message": "Arquivo JSON",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "Nome da conta"
   },
