--- a/app/_locales/tl/messages.json
+++ b/app/_locales/tl/messages.json
@@ -2921,6 +2921,9 @@
     "message": "File na JSON",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "Pangalan ng Account"
   },
