--- a/app/_locales/el/messages.json
+++ b/app/_locales/el/messages.json
@@ -2921,6 +2921,9 @@
     "message": "Αρχείο JSON",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "Όνομα λογαριασμού"
   },
