--- a/app/_locales/es/messages.json
+++ b/app/_locales/es/messages.json
@@ -2921,6 +2921,9 @@
     "message": "Archivo JSON",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "Nombre de la cuenta"
   },
