--- a/app/_locales/hi/messages.json
+++ b/app/_locales/hi/messages.json
@@ -2921,6 +2921,9 @@
     "message": "JSON फाइल",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "अकाउंट का नाम"
   },
