--- a/app/_locales/id/messages.json
+++ b/app/_locales/id/messages.json
@@ -2921,6 +2921,9 @@
     "message": "File JSON",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "Nama akun"
   },
