--- a/app/_locales/ja/messages.json
+++ b/app/_locales/ja/messages.json
@@ -2921,6 +2921,9 @@
     "message": "JSONファイル",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "アカウント名"
   },
