--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -2921,6 +2921,9 @@
     "message": "JSON-файл",
     "description": "format for importing an account"
   },
+  "keycardShell": {
+    "message": "Keycard Shell"
+  },
   "keyringAccountName": {
     "message": "Название счета"
   },
