chore: update tooltip message with native token reference

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -7370,7 +7370,7 @@
     "message": "Paid by MetaMask"
   },
   "swapGasFeesSponsoredExplanation": {
-    "message": "The network fee for this swap is sponsored by MetaMask. This allows you to transact without needing native token on your account. Learn more"
+    "message": "This network fee is paid by MetaMask, so you can swap without $1 in your account."
   },
   "swapGasFeesSummary": {
     "message": "Gas fees are paid to crypto miners who process transactions on the $1 network. MetaMask does not profit from gas fees.",
