--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -2896,7 +2896,7 @@
     "message": "View account on $1"
   },
   "getDollarMore": {
-    "message": "Get $$1 more"
+    "message": "Get $1 more"
   },
   "getTheNewestFeatures": {
     "message": "Get the newest features"
