--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -2005,7 +2005,7 @@
     "message": "the perps page"
   },
   "deepLink_thePredictPage": {
-    "message": "the predict page"
+    "message": "the prediction markets page"
   },
   "deepLink_theRewardsPage": {
     "message": "the MetaMask Rewards page"
