--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -1887,6 +1887,9 @@
   "dappSwapQuoteDifference": {
     "message": "Save $1"
   },
+  "dappSwapRewardText": {
+    "message": "Earn $1 points"
+  },
   "darkTheme": {
     "message": "Dark"
   },
