--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -2166,6 +2166,9 @@
     "message": "Discover Snaps",
     "description": "Text that links to the Snaps website. Displayed in a banner on Snaps list page in settings."
   },
+  "discoveringMultichainAccountButtonLoading": {
+    "message": "Discovering accounts..."
+  },
   "dismiss": {
     "message": "Dismiss"
   },
