Add qr code view
Add test coverage

Add test coverage

Fix lint

Fix import error

Fix lint

Fix lint

Fix lint

Revert replacing portfolio button

Replace discover button

fix bug where rewards balance was overwriting balance perc change

to verify

feat: show points estimate in swaps / bridge

Add intro step

Add onboarding step 1

Add onboarding steps

Add onboarding steps

Rebase

Rebase

Move context to redux state

Move context to redux state

Show error toast

Link accountGroup is needed

Test and fix

Fix variable names

Show modal if not seen before

Rebase

Rebase

Add test coverage

Add test coverage

Fix lint

Fix test

Fix circular dependency

Update .madgerc

Optimize images

Reduce circular dependency

Reduce circular dependency

Fix path

Update .madgerc

Fix tests

Fix tests

Revert changes to policy

Address comments

Address comments

Address comments

Update useCandidateSubscriptionId.ts

Update messages.json

qr code view

Fix styling

Fix lint

qr code view

Fix styling

Fix lint

Fix rebase error

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -5705,6 +5705,12 @@
     "message": "Rewards Points",
     "description": "Alt text for the rewards points icon"
   },
+  "rewardsQRCodeDescription": {
+    "message": "You'll need the app to track your progress and redeem rewards. Scan this QR code and we'll help you import your accounts."
+  },
+  "rewardsQRCodeTitle": {
+    "message": "Get the mobile app"
+  },
   "rewardsSignUp": {
     "message": "Sign up for Rewards"
   },
