feat: Revoke all permissions on site disconnect (#36776)
## **Description**

This PR adds a modal before disconnecting from a site that shows
permissions we have granted for this site and offers and option to
revoke all the permissions.

## **Changelog**

<!--
If this PR is not End-User-Facing and should not show up in the
CHANGELOG, you can choose to either:
1. Write `CHANGELOG entry: null`
2. Label with `no-changelog`

If this PR is End-User-Facing, please write a short User-Facing
description in the past tense like:
`CHANGELOG entry: Added a new tab for users to see their NFTs`
`CHANGELOG entry: Fixed a bug that was causing some NFTs to flicker`

(This helps the Release Engineer do their job more quickly and
accurately)
-->

CHANGELOG entry: Added a dialog when user tries to disconnect from site
to also show and revoke permissions granted to the site.

## **Related issues**

- Depends on: https://github.com/MetaMask/metamask-extension/pull/36635
- Shares some changes with:
https://github.com/MetaMask/metamask-extension/pull/36734

## **Manual testing steps**

1. Go to: Permissions -> sites -> specific site which has permissions +
is connected
2. Click disconnect and again disconnect in the modal
3. You should see a list of all permissions you have granted
4. Click on remove all should create transaction batch to remove all
permissions

Note that removing permissions does create an onchain transaction but
does not yet actually delete permissions from the storage. This will be
addresses in a separate PR.

## **Screenshots/Recordings**

### **Before**


https://github.com/user-attachments/assets/460b1d52-cea5-4754-ac10-3076137887ba


### **After**


https://github.com/user-attachments/assets/73247238-ac20-401a-bbac-4de1860d7ab9

## **Pre-merge author checklist**

- [x] I've followed [MetaMask Contributor
Docs](https://github.com/MetaMask/contributor-docs) and [MetaMask
Extension Coding
Standards](https://github.com/MetaMask/metamask-extension/blob/main/.github/guide

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -4632,6 +4632,12 @@
   "other": {
     "message": "other"
   },
+  "otherPermissionsOnSiteDescription": {
+    "message": "The following permissions were also found on this site. Do you want to remove them?"
+  },
+  "otherPermissionsOnSiteTitle": {
+    "message": "Other permissions on this site"
+  },
   "otherSnaps": {
     "message": "other snaps",
     "description": "Used in the 'permission_rpc' message."
@@ -4712,6 +4718,9 @@
   "pendingTransactionAlertMessageHyperlink": {
     "message": "Learn how to cancel or speed up a transaction.",
     "description": "The text for the hyperlink in the pending transaction alert message"
+  },
+  "perSecond": {
+    "message": "per second"
   },
   "percentChange": {
     "message": "Percent change"
@@ -5365,6 +5374,9 @@
   "removeAccountModalBannerTitle": {
     "message": "This account will be removed from MetaMask.",
     "description": "Title of a banner alert used on account remove modal."
+  },
+  "removeAll": {
+    "message": "Remove all"
   },
   "removeKeyringSnap": {
     "message": "Removing this Snap removes these accounts from MetaMask:"
@@ -6662,6 +6674,9 @@
   "siweURI": {
     "message": "URL"
   },
+  "skip": {
+    "message": "Skip"
+  },
   "skipDeepLinkInterstitial": {
     "message": "Don't show interstitial screen when opening deep links"
   },
@@ -7898,6 +7913,12 @@
   "tokenStandard": {
     "message": "Token standard"
   },
+  "tokenStream": {
+    "message": "Token Stream"
+  },
+  "tokenSubscription": {
+    "message": "Token Subscription"
+  },
   "tokenSymbol": {
     "message": "Token symbol"
   },
@@ -8444,6 +8465,9 @@
   "websites": {
     "message": "websites",
     "description": "Used in the 'permission_rpc' message."
+  },
+  "weekly": {
+    "message": "weekly"
   },
   "welcomeBack": {
     "message": "Welcome back"
