--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -1887,6 +1887,9 @@
   "dappSwapQuoteDifference": {
     "message": "Save $1"
   },
+  "dappSwapRewardText": {
+    "message": "Earn $1 points"
+  },
   "darkTheme": {
     "message": "Dark"
   },
@@ -2579,6 +2582,9 @@
   },
   "estimatedFeeTooltip": {
     "message": "Amount paid to process the transaction on network."
+  },
+  "estimatedPointsRow": {
+    "message": "Est. points"
   },
   "ethGasPriceFetchWarning": {
     "message": "Backup gas price is provided as the main gas estimation service is unavailable right now."
