Add deep link for settings page
Fix locales consistency

Fix lint in locales

Add e2e test for settings deep link

Add tab param for settings deep link

Add await

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -2016,6 +2016,9 @@
   "deepLink_theRewardsPage": {
     "message": "the MetaMask Rewards page"
   },
+  "deepLink_theSettingsPage": {
+    "message": "the settings page"
+  },
   "deepLink_theSwapsPage": {
     "message": "the swaps page"
   },
