--- a/app/_locales/en_GB/messages.json
+++ b/app/_locales/en_GB/messages.json
@@ -2016,6 +2016,9 @@
   "deepLink_theRewardsPage": {
     "message": "the MetaMask Rewards page"
   },
+  "deepLink_theSettingsPage": {
+    "message": "the settings page"
+  },
   "deepLink_theSwapsPage": {
     "message": "the swaps page"
   },
